@@ -1,0 +1,41 @@
+    // Link to this icmconf from class-directories.
+    // Use 'icmbuild' to compile the classes for initial compilation tests
+    // Then use icmbuild clean to remove compiled object files
+
+#define ADD_LIBRARIES       ""
+
+#define ADD_LIBRARY_PATHS   ""
+
+#define CLS
+
+#define CXX                 "g++"
+
+#define CXXFLAGS            " --std=c++0x -Wall -O2"
+
+#define LDFLAGS             ""
+
+#define MAIN                ""
+
+#define OBJ_EXT             ".o"
+
+#define PARSER_DIR          ""
+#define PARSFLAGS           ""
+#define PARSGEN             ""
+#define PARSOUT             ""
+#define PARSSPEC            ""
+
+#define SCANNER_DIR         ""  
+#define SCANFLAGS           ""
+#define SCANGEN             ""
+#define SCANOUT             ""
+#define SCANSPEC            ""
+
+#define SHAREDREQ           ""
+
+#define SOURCES             "*.cc"
+
+#define TMP_DIR             "tmp"
+
+#define USE_ECHO            ON
+
+#define DEFCOM              "library"
