@@ -1,0 +1,7 @@
+#include "syslogbuf.ih"
+
+void Syslogbuf::close()
+{
+    sync();   
+    closelog();
+}
