@@ -3,7 +3,7 @@
 int Syslogbuf::overflow(int c)
 {
     if (c != EOF)
-        d_buffer += static_cast<char>(c);
+        d_data->buffer += static_cast<char>(c);
     else
         sync();
 
