@@ -1,7 +1,5 @@
 #include "syslogbuf"
 
-#include <cstdio>
-
 using namespace std;
 using namespace FBB;
 
