@@ -1,0 +1,5 @@
+#include "syslogstream.ih"
+
+void SyslogStream::
+{
+}
