@@ -84,7 +84,9 @@
 //     LOG_DEBUG
 //            debug-level message
 
-#include <bobcat/syslogbuf>
+//#include <bobcat/syslogbuf>
+#include "../syslogbuf/syslogbuf"
+
 #include <ostream>
 #include <syslog.h>
                         
@@ -94,6 +96,10 @@ namespace FBB
 class SyslogStream: private Syslogbuf, public std::ostream
 {
     public:
+        explicit SyslogStream(std::string const &ident = "",
+            Priority priority = NOTICE, Facility facility = USER,
+            int option = 0);
+
         explicit SyslogStream(char const *ident,
             Priority priority = NOTICE, Facility facility = USER,
             int option = 0);
@@ -102,6 +108,16 @@ class SyslogStream: private Syslogbuf, public std::ostream
         Priority defaultPriority()   const;
         Priority setPriority(Priority priority);
         Priority setDefaultPriority(Priority priority);
+
+        void open(std::string const &ident,
+            Priority priority = NOTICE, Facility facility = USER,
+            int option = 0);
+        void close();
+
+        static  Priority stoP(std::string const &name, 
+                                                Priority priority = NOTICE);
+        static  Facility stoF(std::string const &name, 
+                                                Facility facility = USER);
 
 // MANIPULATORS:
         static std::ostream &emerg(std::ostream &str);
@@ -117,9 +133,18 @@ class SyslogStream: private Syslogbuf, public std::ostream
     private:
         static std::ostream &setPriority(std::ostream &str, 
                                         Priority priority);
-
 };
 
+inline void SyslogStream::close()
+{
+    Syslogbuf::close();
+}
+
+inline void SyslogStream::open(std::string const &ident, Priority priority, 
+                               Facility facility, int option)
+{
+    Syslogbuf::open(ident, priority, facility, option);
+}
 
 inline Priority SyslogStream::priority()   const       
 {
