@@ -1,7 +1,10 @@
 #include "syslogstream"
 
-#include <string.h>
-#include <errno.h>
+// #include <string.h>
+// #include <errno.h>
+
+#include <unordered_map>
+#include <bobcat/string>
 
 using namespace std;
 using namespace FBB;
