@@ -1,6 +1,6 @@
 #include "syslogstream.ih"
 
-SyslogStream::SyslogStream(char const *ident, Priority priority, 
+SyslogStream::SyslogStream(string const &ident, Priority priority, 
                             Facility facility, int option)
 :
     Syslogbuf(ident, priority, facility, option),
