@@ -1,3 +1,12 @@
+bobcat (3.14.00)
+
+  * Added new members to Syslogbuf
+
+  * Added new members to SyslogStream
+
+
+
+
 bobcat (3.13.00)
 
   * Added new member CGI::param1
